[build-system]
  # build-backend = "hatchling.build"
  build-backend = "setuptools.build_meta"
  # requires = ["hatchling"]
  requires = ["setuptools", "versioneer[toml]"]

[options]
  zip_safe = false
  include_package_data = true

[project]
  name = "xxpaper"
  # version = "0.0.1"
  authors = [
    { name="J C Lawrence", email="claw@kanga.nu" },
  ]
  description = "Tools for generating printable files of shares, privates, trains etc for 18xx and like games."
  dynamic = ["dependencies", "version",]
  readme = "README.rst"
  requires-python = ">=3.7"
  classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
  ]

[project.scripts]
  xxpaper = "xxpaper.main:main"

[project.urls]
  "Homepage" = "https://github.com/clearclaw/xxpaper"
  
[tool.versioneer]
  VCS = "git"
  style = "pep440-old"
  versionfile_source = "xxpaper/_version.py"
  versionfile_build = "xxpaper/_version.py"
  tag_prefix = ""
  parentdir_prefix = "xxpaper-"
   